Implementation of AI states